# Agent_Exploration

./: .gitignore  Agent - Learn insights from Youtube video  Agent - Learn insights from Youtube video (1).ipynb  Agent - Learn insights from Youtube video.ipynb  Agent_Langfun_Tutorial.ipynb  Agent_Learn_insights_from_Youtube_video.ipynb  Agent_Youtube_Insights_Fetcher.ipynb  Agent_Youtube_video_insights.ipynb  README.md  SECURITY_AUDIT.md
CLIs/oa-cli/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
CLIs/oa-cli/.github/workflows/: publish.yml
CLIs/oa-cli/dashboard-src/: package-lock.json  package.json
CLIs/oa-cli/dashboard-src/src/: App.tsx  i18n.tsx  main.tsx  types.ts
CLIs/oa-cli/dashboard-src/src/components/: GoalCard.tsx  GoalDetailSection.tsx  HealthSummaryStrip.tsx  MechanismView.tsx  MetricChartPanel.tsx  SystemHealth.tsx  TraceFlowCard.tsx
CLIs/oa-cli/dashboard-src/src/hooks/: useOAData.ts
CLIs/oa-cli/dashboard-src/src/lib/: runtimeFlags.ts
CLIs/oa-cli/docs/: 2026-03-23-release-smoke.md
CLIs/oa-cli/src/oa/: __init__.py  cli.py  server.py
CLIs/oa-cli/src/oa/core/: config.py  scanner.py  schema.py  session_data.py
CLIs/oa-cli/src/oa/dashboard/: .gitkeep  app.js  index.html  style.css
CLIs/oa-cli/src/oa/dashboard/assets/: GoalDetailSection-obevY6jT.js  MechanismView-DVGHV4_I.js  (+9 more)
CLIs/oa-cli/src/oa/pipelines/: cron_reliability.py  team_health.py
CLIs/oa-cli/templates/: config.yaml
CLIs/oa-cli/test-project/: config.yaml
CLIs/oa-cli/tests/: test_cli.py  test_config.py  test_dashboard.py  test_pipelines.py  test_scanner.py  test_server.py
(+114 files in other folders)
