[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oa-cli"
version = "0.1.0"
description = "Operational analytics for your AI agent team"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MotusAI", email = "hello@motusai.com" },
]
keywords = ["openclaw", "agents", "analytics", "dashboard", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy",
]

[project.scripts]
oa = "oa.cli:main"

[project.urls]
Homepage = "https://github.com/motusai/oa-cli"
Repository = "https://github.com/motusai/oa-cli"
Issues = "https://github.com/motusai/oa-cli/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src/oa"]
